--- a/module_2/boardgames/css/styles.css
+++ b/module_2/boardgames/css/styles.css
@@ -1,11 +1,44 @@
 body{
     background-color: #000000;
     color: whitesmoke;
+    width: 850px;
 }
 
+header{
+    background-color: red;
+    color: black;
+    width: 850px;
+    border: 3px solid yellow;
+    border-radius: 9px;
+    padding: 10px;
+    margin-top: 10px;
+    text-align: center;
+}
+section {
+    padding: 5px;
+}
+nav>a {
+    color: white;
+    text-decoration: none;
+    margin-right: 10px; 
+}
+
+nav>a:hover {
+    color: yellow;
+    font-weight: bold; 
+}
+
+h2 {
+    margin-bottom: 10px; 
+}
 h3{
     color: yellow
 }
-header{
-    background-color: red;
+h1 {
+    margin-top: 0;
+}
+
+h3 + p {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
