--- a/module_2/prefolio/css/styles.css
+++ b/module_2/prefolio/css/styles.css
@@ -1,21 +1,59 @@
-body{
+body {
     background-color: #333;
     color: #edf0f5;
     font-family: "Lucida Console", "Monaco", monospace;
-    outline: auto;
+    margin: 0;
+    padding: 0;
+    background-image: url('https://github.com/thomas10-10/foo-Wallpaper-Feh-Gif/blob/master/desktop-animation2.gif?raw=true');
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
+    padding:0;
+    margin:0;
 }
 
-h3{
+.container {
+    max-width: 850px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+header {
+    background-color: #333;
+    padding: 10px;
+    border: 2px solid #637bad;
+    text-align: center;
+}
+
+h1 {
+    margin: 0;
+}
+
+section {
+    background-color: #444;
+    padding: 20px;
+    border: 1px solid #637bad;
+    margin: 20px 0;
+}
+
+h2 {
     color: #637bad;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    margin-bottom: 5px;
 }
 
 footer {
-    padding-bottom: 70px;
-    background-color: rgb(116, 255, 69);
-    color: #333;
+    padding: 20px 0;
+    background-color: #333;
+    color: #637bad;
     text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border: 1px solid #637bad;
 }
+
