--- a/module_2/extra/responsive/style.css
+++ b/module_2/extra/responsive/style.css
@@ -1,8 +1,8 @@
-
-
-body {
+body{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  width: 80%; 
+  background-color: red;
+  color: green;
+  width: 500px;
   margin: 0 auto;
 }
 
@@ -13,7 +13,7 @@ body {
   margin: 5px;
   border: 1px solid black;
   background-color: white;
-  width: 100%;
+  width : 480px;
 }
 
 nav {
@@ -26,8 +26,10 @@ nav a {
   font-size: 16px;
   border: 1px black dotted;
   text-align: center;
-  text-decoration: none;
+}
+nav a:link, nav a:visited, nav a:active {
   color: white;
+  text-decoration: none;
 }
 
 header p {
@@ -39,31 +41,27 @@ h1 {
   text-align: center;
 }
 
-
-.small, .medium, .large {
+.tiny, .small, .large {
   display: none;
 }
 
-
-
 @media screen and (min-width: 576px) {
   body {
-    background-color: #e0e0e0; 
-    color: #333; 
+    background-color: #e0e0e0;
+    color: #333;
+    font-size: 1em;
   }
 
   .small {
     display: block;
-    font-size: 1em; 
   }
 }
 
-
 @media screen and (min-width: 768px) {
   body {
-    background-color: #c0c0c0; 
-    color: #222; 
-    font-size: 1.2em; 
+    background-color: blue;
+    font-size: 1.2em;
+    width: 80%;
   }
 
   .medium {
@@ -75,19 +73,21 @@ h1 {
   }
 }
 
-
 @media screen and (min-width: 992px) {
   body {
-    background-color: #a0a0a0; 
-    color: #111; 
+    background-color: #111;
+    color: rgb(103, 103, 103);
     font-size: 1.4em;
+    width: 80%;
   }
 
   .large {
     display: block;
   }
 
-  .large-img {
-    display: block;
+  nav a{
+    display: inline;
+    border: none;
   }
+  
 }
