--- a/module_2/prefolio/styling/styles.css
+++ b/module_2/prefolio/styling/styles.css
@@ -8,25 +8,25 @@ body {
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
 }
 
 .container {
     max-width: 850px;
     margin: 0 auto;
     padding: 20px;
-    
 }
+
 a {
-    color: #edf0f5; 
-    text-decoration: underline; 
-    font-weight: bold; 
+    color: #edf0f5;
+    text-decoration: underline;
+    font-weight: bold;
 }
 
 a:hover {
-    color: aqua; 
-    text-decoration: none; 
+    color: aqua;
+    text-decoration: none;
 }
 
 header {
@@ -68,3 +68,43 @@ footer {
     border: 1px solid #637bad;
 }
 
+
+/** SmartPhone (max-width: 576px) */
+@media screen and (max-width: 576px) {
+    header {
+        padding: 5px;
+    }
+
+    h1 {
+        font-size: 1.5em;
+    }
+
+    section {
+        padding: 10px;
+        margin: 10px 0;
+    }
+
+    footer {
+        padding: 10px 0;
+    }
+}
+
+/** Tablet (min-width: 577px en max-width: 768px) */
+@media screen and (min-width: 577px) and (max-width: 768px) {
+    header {
+        padding: 8px;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    section {
+        padding: 15px;
+        margin: 15px 0;
+    }
+
+    footer {
+        padding: 15px 0;
+    }
+}
