--- a/module_2/style.css
+++ b/module_2/style.css
@@ -1,33 +1,45 @@
+body {
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    margin: 20px;
+    background-color: #77767c;
+}
 
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+h2 {
+    color: #333;
+}
 
-        h2 {
-            color: #333;
-        }
+.product {
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 5px;
+}
 
-        .product {
-            margin-bottom: 20px;
-            border: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 5px;
-        }
+.product img {
+    max-width: 50%;
+    max-height: 30%;
+    height: auto;
+    border-radius: 5px;
+    display: block; /** Removes extra space below inline images */
+    margin: 0 auto; /** Centers the image within its container */
+}
 
-        .product img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
+.product a {
+    text-decoration: none;
+    color: #007BFF;
+    font-weight: bold;
+}
 
-        .product a {
-            text-decoration: none;
-            color: #007BFF;
-            font-weight: bold;
-        }
+.product p {
+    color: #333;
+}
 
-        .product p {
-            color: #555;
-        }
+/** Responsive Styles */
+@media screen and (max-width: 600px) {
+    .product {
+        padding: 5px;
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
 
